undo change from before

--- a/application.json
+++ b/application.json
@@ -522,7 +522,7 @@
         {
           "model": "marketing_analytics",
           "view": "ad_group_date_fact",
-          "params": "&sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "fields": {
             "spend": {
               "inverseChange": true,
@@ -772,7 +772,7 @@
             }
           },
           "model": "marketing_analytics",
-          "params": "sorts=fact.date_period+desc&fields=fact.date_period&f[ad_group.status_active]=Yes&f[ad.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_latest]=Yes",
+          "params": "sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[ad_group.status_active]=Yes&f[ad.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "view": "ad_date_fact"
         },
         {
@@ -1524,7 +1524,7 @@
         {
           "model": "marketing_analytics",
           "view": "fb_adset_date_fact",
-          "params": "&sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "fields": {
             "spend": {
               "inverseChange": true,
@@ -1745,7 +1745,7 @@
             }
           },
           "model": "marketing_analytics",
-          "params": "sorts=fact.date_period+desc&fields=fact.date_period&f[adset.status_active]=Yes&f[ad.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_latest]=Yes",
+          "params": "sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[adset.status_active]=Yes&f[ad.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "view": "fb_ad_date_fact"
         },
         {
@@ -1762,7 +1762,7 @@
             }
           },
           "model": "marketing_analytics",
-          "params": "sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[adset.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_latest]=Yes",
+          "params": "sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[adset.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "view": "fb_adset_date_fact"
         }
       ]
@@ -2248,7 +2248,7 @@
         {
           "model": "marketing_analytics",
           "view": "linkedin_ad_date_fact",
-          "params": "&sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "fields": {
             "spend": {
               "inverseChange": true,
@@ -2441,7 +2441,7 @@
         {
           "model": "marketing_analytics",
           "view": "bing_ad_group_date_fact",
-          "params": "&sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "fields": {
             "spend": {
               "inverseChange": true,
@@ -2701,7 +2701,7 @@
             }
           },
           "model": "marketing_analytics",
-          "params": "sorts=fact.date_period+desc&fields=fact.date_period&f[adset.status_active]=Yes&f[ad.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_latest]=Yes",
+          "params": "sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[adset.status_active]=Yes&f[ad.status_active]=Yes&f[campaign.status_active]=Yes&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "view": "bing_ad_date_fact"
         },
         {
@@ -2718,7 +2718,7 @@
             }
           },
           "model": "marketing_analytics",
-          "params": "sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "view": "bing_keyword_date_fact"
         },
         {
@@ -2735,7 +2735,7 @@
             }
           },
           "model": "marketing_analytics",
-          "params": "sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "view": "bing_ad_date_fact"
         }
       ]
@@ -3499,7 +3499,7 @@
         {
           "model": "marketing_analytics",
           "view": "cross_channel_ad_impressions",
-          "params": "&sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
           "fields": {
             "spend": {
               "inverseChange": true,
@@ -3673,7 +3673,7 @@
         {
           "model": "marketing_analytics",
           "view": "pinterest_ad_impressions",
-          "params": "&sorts=fact.date_period+desc&fields=fact.date_period&f[fact.date_period_latest]=Yes",
+          "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period=Yes",
           "fields": {
             "spend": {
               "inverseChange": true,
